tests/pos-macros/i18911/Test_2.scala
@main def Test = {
  case class Document()
  val expected: Document = ???
  Assertions.assert( expected == Document()) // error
}
